--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@convex-dev/auth": "^0.0.90",
     "@faker-js/faker": "^10.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@jridgewell/trace-mapping": "^0.3.31",
@@ -44,6 +43,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/vite": "^4.1.17",
     "@types/three": "^0.181.0",
     "@vly-ai/integrations": "^0.6.1",
@@ -52,12 +52,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "convex": "^1.30.0",
-    "crud": "link:convex-helpers/server/crud",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.25",
     "hono": "^4.10.7",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
@@ -65,6 +65,7 @@
     "react-day-picker": "9.11.3",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-i18next": "^16.5.3",
     "react-intersection-observer": "^10.0.0",
     "react-resizable-panels": "^3.0.6",
     "react-router": "^7.10.0",
