--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "format": "prettier --write .",
+    "seed": "npx tsx server/src/seed-comprehensive.ts",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -43,7 +44,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
-    "@supabase/supabase-js": "^2.90.1",
+    "@supabase/supabase-js": "^2.45.0",
     "@tailwindcss/vite": "^4.1.17",
     "@types/three": "^0.181.0",
     "@vly-ai/integrations": "^0.6.1",
@@ -53,6 +54,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.25",
     "hono": "^4.10.7",
@@ -67,8 +69,9 @@
     "react-hook-form": "^7.67.0",
     "react-i18next": "^16.5.3",
     "react-intersection-observer": "^10.0.0",
+    "react-is": "^19.2.3",
     "react-resizable-panels": "^3.0.6",
-    "react-router": "^7.10.0",
+    "react-router": "^7.12.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -81,7 +84,7 @@
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
