--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "algo-nexus-server",
+  "name": "AlgoTime",
   "version": "1.0.0",
   "description": "Backend API for Algo Nexus Prime",
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "seed": "node src/seedAlgorithms.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.10",
     "@types/node-fetch": "^2.6.13",
+    "@types/react-router-dom": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "concurrently": "^9.2.1",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.0"
   }
 }
