--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,4 @@
-<<<<<<< HEAD
-SUPABASE_URL=https://frcqntcmrpjiydoihbcm.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=sb_secret_8yRH1xFFKBUk5iRuV4CAmA_kodZdFT5
-=======
-VITE_SUPABASE_URL=https://frcqntcmrpjiydoihbcm.supabase.co
-VITE_SUPABASE_ANON_KEY=sb_publishable_I5b-YIi_OLzr5V6fa9Vsng_M2b2knC2
-SUPABASE_SERVICE_ROLE_KEY=sb_secret_8yRH1xFFKBUk5iRuV4CAmA_kodZdFT5
-PORT=5000
->>>>>>> 6940946 (initial commit)
+SUPABASE_URL=https://tuhjfziufhfcjdvthaaj.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=sb_secret_1av_9Z4n9sNanI7Tizw2kA_td9B8okw
+VITE_SUPABASE_URL=https://tuhjfziufhfcjdvthaaj.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_8qF1NDDhRrPz8EPbxHAJLA_nyaNURH6
