Clean up project: remove unwanted files, fix logout, add Google Sign-In to login page

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,8 +33,7 @@
     }
   },
   "include": [
-    "src",
-    "vly-toolbar-readonly.tsx"
+    "src"
   ],
   "exclude": [
     "src/seed-comprehensive.ts"
